// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Object List Borderless 1`] = `
<section>
  

  <h4
    id="objectListItemBorderless"
  >
    Borderless Object List Item
  </h4>
  

  <div
    style="max-width: 450px"
  >
    

    <ul
      aria-labelledby="objectListItemBorderless"
      class="fd-list fd-object-list fd-list--no-border"
      role="list"
    >
      
  
      <li
        class="fd-list__item fd-object-list__item"
        role="listitem"
        tabindex="0"
      >
        
    
        <div
          class="fd-object-list__container"
        >
          
      
          <div
            class="fd-object-list__intro"
          >
            
      Optional inline text very very very long
      
          </div>
          
      
          <div
            class="fd-object-list__header"
          >
            
        
            <span
              class="fd-avatar fd-avatar--s"
              style="background-image: url('http://picsum.photos/id/1018/400')"
            >
              
        
            </span>
            
        
            <div
              class="fd-object-list__header-left"
            >
              
         
              <div
                class="fd-object-identifier fd-object-list__object-identifier"
              >
                
          
                <p
                  class="fd-object-identifier__title"
                >
                  
           Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
          
                </p>
                
         
              </div>
              
        
            </div>
            
        
            <div
              class="fd-object-list__header-right"
            >
              
          
              <span
                class="fd-object-number fd-object-number--critical fd-object-list__object-number"
              >
                
            
                <span
                  class="fd-object-number__text"
                >
                  457.00
                </span>
                
            
                <span
                  class="fd-object-number__unit"
                >
                  Euro
                </span>
                
          
              </span>
              
        
            </div>
            
      
          </div>
          
      
          <div
            class="fd-object-list__content"
          >
            
        
            <div
              class="fd-object-list__row"
            >
              
          
              <div
                class="fd-object-list__row-left"
              >
                
            
                <div
                  class="fd-object-list__object-attribute"
                >
                  
              
              First Attribute
            
                </div>
                
          
              </div>
              
          
              <div
                class="fd-object-list__row-right"
              >
                
            
                <div
                  class="fd-object-marker"
                >
                  
              
                  <i
                    aria-label="icon for flag"
                    class="fd-object-marker__icon sap-icon--flag"
                  />
                  
            
                </div>
                
            
                <div
                  class="fd-object-marker"
                >
                  
              
                  <i
                    aria-label="icon for favourite"
                    class="fd-object-marker__icon sap-icon--favorite"
                  />
                  
            
                </div>
                
          
              </div>
              
        
            </div>
            
        
            <div
              class="fd-object-list__row"
            >
              
          
              <div
                class="fd-object-list__row-left"
              >
                
            
                <div
                  class="fd-object-list__object-attribute"
                >
                  
              Second Attribute
            
                </div>
                
          
              </div>
              
          
              <div
                class="fd-object-list__row-right"
              >
                
            
                <span
                  class="fd-object-status fd-object-status--critical"
                >
                  
              
                  <span
                    class="fd-object-status__text"
                  >
                    Critical very very very long
                  </span>
                  
            
                </span>
                
          
              </div>
              
        
            </div>
            
        
            <div
              class="fd-object-list__row"
            >
              
          
              <div
                class="fd-object-list__row-left"
              >
                
            
                <div
                  class="fd-object-list__object-attribute"
                >
                  
              Third Attribute
            
                </div>
                
        
              </div>
              
      
            </div>
            
    
          </div>
          
    
        </div>
        
  
      </li>
      
  
      <li
        class="fd-list__item fd-object-list__item"
        role="listitem"
        tabindex="0"
      >
        
    
        <div
          class="fd-object-list__container"
        >
          
      
          <div
            class="fd-object-list__intro"
          >
            
      Optional inline text very very very long
      
          </div>
          
      
          <div
            class="fd-object-list__header"
          >
            
        
            <span
              class="fd-avatar fd-avatar--s"
              style="background-image: url('http://picsum.photos/id/1018/400')"
            >
              
        
            </span>
            
        
            <div
              class="fd-object-list__header-left"
            >
              
         
              <div
                class="fd-object-identifier fd-object-list__object-identifier"
              >
                
          
                <p
                  class="fd-object-identifier__title"
                >
                  
           Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
          
                </p>
                
         
              </div>
              
        
            </div>
            
        
            <div
              class="fd-object-list__header-right"
            >
              
          
              <span
                class="fd-object-number fd-object-number--critical fd-object-list__object-number"
              >
                
            
                <span
                  class="fd-object-number__text"
                >
                  956.00
                </span>
                
            
                <span
                  class="fd-object-number__unit"
                >
                  Euro
                </span>
                
          
              </span>
              
        
            </div>
            
      
          </div>
          
      
          <div
            class="fd-object-list__content"
          >
            
        
            <div
              class="fd-object-list__row"
            >
              
          
              <div
                class="fd-object-list__row-left"
              >
                
            
                <div
                  class="fd-object-list__object-attribute"
                >
                  
              
              First Attribute
            
                </div>
                
          
              </div>
              
          
              <div
                class="fd-object-list__row-right"
              >
                
          
                <span
                  class="fd-object-status fd-object-status--negative"
                >
                  
          
                  <i
                    class="fd-object-status__icon sap-icon--status-negative"
                    role="presentation"
                  />
                  
          
                  <span
                    class="fd-object-status__text"
                  >
                    Negative
                  </span>
                  
         
                </span>
                
          
              </div>
              
        
            </div>
            
        
            <div
              class="fd-object-list__row"
            >
              
          
              <div
                class="fd-object-list__row-left"
              >
                
            
                <div
                  class="fd-object-list__object-attribute"
                >
                  
              Second Attribute
            
                </div>
                
          
              </div>
              
          
              <div
                class="fd-object-list__row-right"
              >
                
            
                <span
                  class="fd-object-status fd-object-status--critical"
                >
                  
              
                  <span
                    class="fd-object-status__text"
                  >
                    Critical
                  </span>
                  
            
                </span>
                
          
              </div>
              
        
            </div>
            
        
            <div
              class="fd-object-list__row"
            >
              
          
              <div
                class="fd-object-list__row-left"
              >
                
            
                <div
                  class="fd-object-list__object-attribute"
                >
                  
              Third Attribute
            
                </div>
                
        
              </div>
              
      
            </div>
            
    
          </div>
          
    
        </div>
        
  
      </li>
      
  
      <li
        class="fd-list__item fd-object-list__item"
        role="listitem"
        tabindex="0"
      >
        
    
        <div
          class="fd-object-list__container"
        >
          
      
          <div
            class="fd-object-list__intro"
          >
            
      Optional inline text very very very long
      
          </div>
          
      
          <div
            class="fd-object-list__header"
          >
            
        
            <span
              class="fd-avatar fd-avatar--s"
              style="background-image: url('http://picsum.photos/id/1018/400')"
            >
              
        
            </span>
            
        
            <div
              class="fd-object-list__header-left"
            >
              
         
              <div
                class="fd-object-identifier fd-object-list__object-identifier"
              >
                
          
                <p
                  class="fd-object-identifier__title"
                >
                  
           Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
          
                </p>
                
         
              </div>
              
        
            </div>
            
        
            <div
              class="fd-object-list__header-right"
            >
              
          
              <span
                class="fd-object-number fd-object-number--critical fd-object-list__object-number"
              >
                
            
                <span
                  class="fd-object-number__text"
                >
                  956.00
                </span>
                
            
                <span
                  class="fd-object-number__unit"
                >
                  Euro
                </span>
                
          
              </span>
              
        
            </div>
            
      
          </div>
          
      
          <div
            class="fd-object-list__content"
          >
            
        
            <div
              class="fd-object-list__row"
            >
              
          
              <div
                class="fd-object-list__row-left"
              >
                
            
                <div
                  class="fd-object-list__object-attribute"
                >
                  
              
              First Attribute
            
                </div>
                
          
              </div>
              
          
              <div
                class="fd-object-list__row-right"
              >
                
          
                <span
                  class="fd-object-status fd-object-status--inverted fd-object-status--critical"
                >
                  warning
                </span>
                
          
              </div>
              
        
            </div>
            
        
            <div
              class="fd-object-list__row"
            >
              
          
              <div
                class="fd-object-list__row-left"
              >
                
            
                <div
                  class="fd-object-list__object-attribute"
                >
                  
              Second Attribute
            
                </div>
                
          
              </div>
              
          
              <div
                class="fd-object-list__row-right"
              >
                
            
                <span
                  class="fd-object-status fd-object-status--critical"
                >
                  
              
                  <span
                    class="fd-object-status__text"
                  >
                    Critical
                  </span>
                  
            
                </span>
                
          
              </div>
              
        
            </div>
            
        
            <div
              class="fd-object-list__row"
            >
              
          
              <div
                class="fd-object-list__row-left"
              >
                
            
                <div
                  class="fd-object-list__object-attribute"
                >
                  
              Third Attribute
            
                </div>
                
        
              </div>
              
      
            </div>
            
    
          </div>
          
    
        </div>
        
  
      </li>
      

    </ul>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Object List Navigation 1`] = `
<section>
  


  <h4
    id="objectListItemNavigation"
  >
    Object List Item With Navigation
  </h4>
  


  <div
    role="navigation"
    style="max-width: 450px"
  >
    

    <ul
      aria-labelledby="objectListItemNavigation"
      class="fd-list fd-object-list fd-list--navigation-object fd-list--navigation"
      role="list"
    >
      
  
      <li
        class="fd-list__item fd-object-list__item fd-list__item--link"
        role="listitem"
        tabindex="0"
      >
        
  
        <a
          class="fd-list__link"
          href="#"
          tabindex="0"
        >
          
    
          <div
            class="fd-object-list__container"
          >
            
      
            <div
              class="fd-object-list__intro"
            >
              
       Optional inline text very very very long
      
            </div>
            
      
            <div
              class="fd-object-list__header"
            >
              
        
              <span
                class="fd-avatar fd-avatar--s fd-avatar--circle"
                style="background-image: url('http://picsum.photos/id/1018/400')"
              >
                
        
              </span>
              
        
              <div
                class="fd-object-list__header-left"
              >
                
         
                <div
                  class="fd-object-identifier fd-object-list__object-identifier"
                >
                  
          
                  <p
                    class="fd-object-identifier__title"
                  >
                    
           Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
          
                  </p>
                  
         
                </div>
                
        
              </div>
              
        
              <div
                class="fd-object-list__header-right"
              >
                
          
                <span
                  class="fd-object-number fd-object-number--critical fd-object-list__object-number"
                >
                  
            
                  <span
                    class="fd-object-number__text"
                  >
                    457.00
                  </span>
                  
            
                  <span
                    class="fd-object-number__unit"
                  >
                    Euro
                  </span>
                  
          
                </span>
                
        
              </div>
              
      
            </div>
            
      
            <div
              class="fd-object-list__content"
            >
              
        
              <div
                class="fd-object-list__row"
              >
                
          
                <div
                  class="fd-object-list__row-left"
                >
                  
            
                  <div
                    class="fd-object-list__object-attribute"
                  >
                    
              
              First Attribute
            
                  </div>
                  
          
                </div>
                
          
                <div
                  class="fd-object-list__row-right"
                >
                  
            
                  <div
                    class="fd-object-marker"
                  >
                    
              
                    <i
                      aria-label="icon for flag"
                      class="fd-object-marker__icon sap-icon--flag"
                    />
                    
            
                  </div>
                  
            
                  <div
                    class="fd-object-marker"
                  >
                    
              
                    <i
                      aria-label="icon for favourite"
                      class="fd-object-marker__icon sap-icon--favorite"
                    />
                    
            
                  </div>
                  
          
                </div>
                
        
              </div>
              
        
              <div
                class="fd-object-list__row"
              >
                
          
                <div
                  class="fd-object-list__row-left"
                >
                  
            
                  <div
                    class="fd-object-list__object-attribute"
                  >
                    
              Second Attribute
            
                  </div>
                  
          
                </div>
                
          
                <div
                  class="fd-object-list__row-right"
                >
                  
            
                  <span
                    class="fd-object-status fd-object-status--critical"
                  >
                    
              
                    <span
                      class="fd-object-status__text"
                    >
                      Critical very very very long
                    </span>
                    
            
                  </span>
                  
          
                </div>
                
        
              </div>
              
        
              <div
                class="fd-object-list__row"
              >
                
          
                <div
                  class="fd-object-list__row-left"
                >
                  
            
                  <div
                    class="fd-object-list__object-attribute"
                  >
                    
              Third Attribute
            
                  </div>
                  
        
                </div>
                
      
              </div>
              
    
            </div>
            
    
          </div>
          
    
        </a>
        
  
      </li>
      
  
      <li
        class="fd-list__item fd-object-list__item fd-list__item--link"
        role="listitem"
        tabindex="0"
      >
        
  
        <a
          class="fd-list__link"
          href="#"
          tabindex="0"
        >
          
    
          <div
            class="fd-object-list__container"
          >
            
      
            <div
              class="fd-object-list__intro"
            >
              
       Optional inline text very very very long
      
            </div>
            
      
            <div
              class="fd-object-list__header"
            >
              
        
              <span
                class="fd-avatar fd-avatar--s fd-avatar--circle"
                style="background-image: url('http://picsum.photos/id/1018/400')"
              >
                
        
              </span>
              
        
              <div
                class="fd-object-list__header-left"
              >
                
         
                <div
                  class="fd-object-identifier fd-object-list__object-identifier"
                >
                  
          
                  <p
                    class="fd-object-identifier__title"
                  >
                    
           Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
          
                  </p>
                  
         
                </div>
                
        
              </div>
              
        
              <div
                class="fd-object-list__header-right"
              >
                
          
                <span
                  class="fd-object-number fd-object-number--critical fd-object-list__object-number"
                >
                  
            
                  <span
                    class="fd-object-number__text"
                  >
                    956.00
                  </span>
                  
            
                  <span
                    class="fd-object-number__unit"
                  >
                    Euro
                  </span>
                  
          
                </span>
                
        
              </div>
              
      
            </div>
            
      
            <div
              class="fd-object-list__content"
            >
              
        
              <div
                class="fd-object-list__row"
              >
                
          
                <div
                  class="fd-object-list__row-left"
                >
                  
            
                  <div
                    class="fd-object-list__object-attribute"
                  >
                    
              
              First Attribute
            
                  </div>
                  
          
                </div>
                
          
                <div
                  class="fd-object-list__row-right"
                >
                  
          
                  <span
                    class="fd-object-status fd-object-status--negative"
                  >
                    
          
                    <i
                      class="fd-object-status__icon sap-icon--status-negative"
                      role="presentation"
                    />
                    
          
                    <span
                      class="fd-object-status__text"
                    >
                      Negative
                    </span>
                    
         
                  </span>
                  
          
                </div>
                
        
              </div>
              
        
              <div
                class="fd-object-list__row"
              >
                
          
                <div
                  class="fd-object-list__row-left"
                >
                  
            
                  <div
                    class="fd-object-list__object-attribute"
                  >
                    
              Second Attribute
            
                  </div>
                  
          
                </div>
                
          
                <div
                  class="fd-object-list__row-right"
                >
                  
            
                  <span
                    class="fd-object-status fd-object-status--critical"
                  >
                    
              
                    <span
                      class="fd-object-status__text"
                    >
                      Critical
                    </span>
                    
            
                  </span>
                  
          
                </div>
                
        
              </div>
              
        
              <div
                class="fd-object-list__row"
              >
                
          
                <div
                  class="fd-object-list__row-left"
                >
                  
            
                  <div
                    class="fd-object-list__object-attribute"
                  >
                    
              Third Attribute
            
                  </div>
                  
        
                </div>
                
      
              </div>
              
    
            </div>
            
    
          </div>
          
    
        </a>
        
  
      </li>
      
  
    </ul>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Object List Selection 1`] = `
<section>
  

  <h4
    id="objectListItemRowSelection"
  >
    Object List Item With Row Selection
  </h4>
  

  <div
    style="max-width: 450px"
  >
    

    <ul
      aria-labelledby="objectListItemRowSelection"
      class="fd-list fd-object-list fd-list--selection fd-list--selection-row"
      role="listbox"
    >
      
  
      <li
        aria-selected="true"
        class="fd-list__item fd-object-list__item is-selected"
        role="option"
        tabindex="0"
      >
        
    
        <div
          class="fd-object-list__container"
        >
          
      
          <div
            class="fd-object-list__intro"
          >
            
       Optional inline text
      
          </div>
          
      
          <div
            class="fd-object-list__header"
          >
            
        
            <div
              class="fd-object-list__header-left"
            >
              
         
              <div
                class="fd-object-identifier fd-object-list__object-identifier"
              >
                
          
                <p
                  class="fd-object-identifier__title"
                >
                  
           Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
          
                </p>
                
         
              </div>
              
        
            </div>
            
        
            <div
              class="fd-object-list__header-right"
            >
              
          
              <span
                class="fd-object-number fd-object-number--critical fd-object-list__object-number"
              >
                
            
                <span
                  class="fd-object-number__text"
                >
                  457.00
                </span>
                
            
                <span
                  class="fd-object-number__unit"
                >
                  Euro
                </span>
                
          
              </span>
              
        
            </div>
            
      
          </div>
          
      
          <div
            class="fd-object-list__content"
          >
            
        
            <div
              class="fd-object-list__row"
            >
              
          
              <div
                class="fd-object-list__row-left"
              >
                
            
                <div
                  class="fd-object-list__object-attribute"
                >
                  
              
              First Attribute
            
                </div>
                
          
              </div>
              
          
              <div
                class="fd-object-list__row-right"
              >
                
            
                <div
                  class="fd-object-marker"
                >
                  
              
                  <i
                    aria-label="icon for flag"
                    class="fd-object-marker__icon sap-icon--flag"
                  />
                  
            
                </div>
                
            
                <div
                  class="fd-object-marker"
                >
                  
              
                  <i
                    aria-label="icon for favourite"
                    class="fd-object-marker__icon sap-icon--favorite"
                  />
                  
            
                </div>
                
          
              </div>
              
        
            </div>
            
        
            <div
              class="fd-object-list__row"
            >
              
          
              <div
                class="fd-object-list__row-left"
              >
                
            
                <div
                  class="fd-object-list__object-attribute"
                >
                  
              Second Attribute
            
                </div>
                
          
              </div>
              
          
              <div
                class="fd-object-list__row-right"
              >
                
            
                <span
                  class="fd-object-status fd-object-status--critical"
                >
                  
              
                  <span
                    class="fd-object-status__text"
                  >
                    Avaliable
                  </span>
                  
            
                </span>
                
          
              </div>
              
        
            </div>
            
        
            <div
              class="fd-object-list__row"
            >
              
          
              <div
                class="fd-object-list__row-left"
              >
                
            
                <div
                  class="fd-object-list__object-attribute"
                >
                  
              Third Attribute
            
                </div>
                
        
              </div>
              
      
            </div>
            
    
          </div>
          
    
        </div>
        
  
      </li>
      
  
      <li
        aria-selected="false"
        class="fd-list__item fd-object-list__item"
        role="option"
        tabindex="0"
      >
        
    
        <div
          class="fd-object-list__container"
        >
          
      
          <div
            class="fd-object-list__intro"
          >
            
       Optional inline text
      
          </div>
          
      
          <div
            class="fd-object-list__header"
          >
            
        
            <span
              class="fd-avatar fd-avatar--s"
              style="background-image: url('http://picsum.photos/id/1018/400')"
            >
              
        
            </span>
            
        
            <div
              class="fd-object-list__header-left"
            >
              
         
              <div
                class="fd-object-identifier fd-object-list__object-identifier"
              >
                
          
                <p
                  class="fd-object-identifier__title"
                >
                  
           Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
          
                </p>
                
         
              </div>
              
        
            </div>
            
        
            <div
              class="fd-object-list__header-right"
            >
              
          
              <span
                class="fd-object-number fd-object-number--critical fd-object-list__object-number"
              >
                
            
                <span
                  class="fd-object-number__text"
                >
                  666.00
                </span>
                
            
                <span
                  class="fd-object-number__unit"
                >
                  Euro
                </span>
                
          
              </span>
              
        
            </div>
            
      
          </div>
          
      
          <div
            class="fd-object-list__content"
          >
            
        
            <div
              class="fd-object-list__row"
            >
              
          
              <div
                class="fd-object-list__row-left"
              >
                
            
                <div
                  class="fd-object-list__object-attribute"
                >
                  
              
              First Attribute
            
                </div>
                
          
              </div>
              
          
              <div
                class="fd-object-list__row-right"
              >
                
          
                <span
                  class="fd-object-status fd-object-status--negative"
                >
                  
          
                  <i
                    class="fd-object-status__icon sap-icon--status-negative"
                    role="presentation"
                  />
                  
          
                  <span
                    class="fd-object-status__text"
                  >
                    Negative
                  </span>
                  
         
                </span>
                
          
              </div>
              
        
            </div>
            
        
            <div
              class="fd-object-list__row"
            >
              
          
              <div
                class="fd-object-list__row-left"
              >
                
            
                <div
                  class="fd-object-list__object-attribute"
                >
                  
              Second Attribute
            
                </div>
                
          
              </div>
              
          
              <div
                class="fd-object-list__row-right"
              >
                
            
                <span
                  class="fd-object-status fd-object-status--critical"
                >
                  
              
                  <span
                    class="fd-object-status__text"
                  >
                    Critical
                  </span>
                  
            
                </span>
                
          
              </div>
              
        
            </div>
            
        
            <div
              class="fd-object-list__row"
            >
              
          
              <div
                class="fd-object-list__row-left"
              >
                
            
                <div
                  class="fd-object-list__object-attribute"
                >
                  
              Third Attribute
            
                </div>
                
        
              </div>
              
      
            </div>
            
    
          </div>
          
    
        </div>
        
  
      </li>
        
 
    </ul>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Object List Selection With Navigation 1`] = `
<section>
  

  <h4
    id="objectListItemRowSelectionAndNavigation"
  >
    Object List Item With Row Selection And Navigation
  </h4>
  

  <div
    role="navigation"
    style="max-width: 450px"
  >
    

    <ul
      aria-labelledby="objectListItemRowSelectionAndNavigation"
      class="fd-list fd-object-list fd-list--navigation-object fd-list--navigation fd-list--selection"
      role="listbox"
    >
      
  
      <li
        aria-selected="true"
        class="fd-list__item fd-object-list__item fd-list__item--link is-selected"
        role="option"
        tabindex="0"
      >
        
  
        <a
          class="fd-list__link"
          tabindex="0"
        >
           
  
          <div
            class="fd-object-list__container"
          >
            
      
            <div
              class="fd-object-list__intro"
            >
              
       Optional inline text
      
            </div>
            
      
            <div
              class="fd-object-list__header"
            >
              
        
              <span
                class="fd-avatar fd-avatar--s"
                style="background-image: url('http://picsum.photos/id/1018/400')"
              >
                
        
              </span>
              
        
              <div
                class="fd-object-list__header-left"
              >
                
         
                <div
                  class="fd-object-identifier fd-object-list__object-identifier"
                >
                  
          
                  <p
                    class="fd-object-identifier__title"
                  >
                    
           Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
          
                  </p>
                  
         
                </div>
                
        
              </div>
              
        
              <div
                class="fd-object-list__header-right"
              >
                
          
                <span
                  class="fd-object-number fd-object-number--critical fd-object-list__object-number"
                >
                  
            
                  <span
                    class="fd-object-number__text"
                  >
                    457.00
                  </span>
                  
            
                  <span
                    class="fd-object-number__unit"
                  >
                    Euro
                  </span>
                  
          
                </span>
                
        
              </div>
              
      
            </div>
            
      
            <div
              class="fd-object-list__content"
            >
              
        
              <div
                class="fd-object-list__row"
              >
                
          
                <div
                  class="fd-object-list__row-left"
                >
                  
            
                  <div
                    class="fd-object-list__object-attribute"
                  >
                    
              
              First Attribute
            
                  </div>
                  
          
                </div>
                
          
                <div
                  class="fd-object-list__row-right"
                >
                  
            
                  <div
                    class="fd-object-marker"
                  >
                    
              
                    <i
                      aria-label="icon for flag"
                      class="fd-object-marker__icon sap-icon--flag"
                    />
                    
            
                  </div>
                  
            
                  <div
                    class="fd-object-marker"
                  >
                    
              
                    <i
                      aria-label="icon for favourite"
                      class="fd-object-marker__icon sap-icon--favorite"
                    />
                    
            
                  </div>
                  
          
                </div>
                
        
              </div>
              
        
              <div
                class="fd-object-list__row"
              >
                
          
                <div
                  class="fd-object-list__row-left"
                >
                  
            
                  <div
                    class="fd-object-list__object-attribute"
                  >
                    
              Second Attribute
            
                  </div>
                  
          
                </div>
                
          
                <div
                  class="fd-object-list__row-right"
                >
                  
            
                  <span
                    class="fd-object-status fd-object-status--critical"
                  >
                    
              
                    <span
                      class="fd-object-status__text"
                    >
                      Avaliable
                    </span>
                    
            
                  </span>
                  
          
                </div>
                
        
              </div>
              
        
              <div
                class="fd-object-list__row"
              >
                
          
                <div
                  class="fd-object-list__row-left"
                >
                  
            
                  <div
                    class="fd-object-list__object-attribute"
                  >
                    
              Third Attribute
            
                  </div>
                  
        
                </div>
                
      
              </div>
              
    
            </div>
            
    
          </div>
          
    
        </a>
        
  
      </li>
      
  
      <li
        aria-selected="false"
        class="fd-list__item fd-object-list__item fd-list__item--link"
        role="option"
        tabindex="0"
      >
        
  
        <a
          class="fd-list__link"
          tabindex="0"
        >
          
    
          <div
            class="fd-object-list__container"
          >
            
      
            <div
              class="fd-object-list__intro"
            >
              
      Optional inline text
      
            </div>
            
      
            <div
              class="fd-object-list__header"
            >
              
        
              <span
                class="fd-avatar fd-avatar--s"
                style="background-image: url('http://picsum.photos/id/1018/400')"
              >
                
        
              </span>
              
        
              <div
                class="fd-object-list__header-left"
              >
                
         
                <div
                  class="fd-object-identifier fd-object-list__object-identifier"
                >
                  
          
                  <p
                    class="fd-object-identifier__title"
                  >
                    
           Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
          
                  </p>
                  
         
                </div>
                
        
              </div>
              
        
              <div
                class="fd-object-list__header-right"
              >
                
          
                <span
                  class="fd-object-number fd-object-number--critical fd-object-list__object-number"
                >
                  
            
                  <span
                    class="fd-object-number__text"
                  >
                    666.00
                  </span>
                  
            
                  <span
                    class="fd-object-number__unit"
                  >
                    Euro
                  </span>
                  
          
                </span>
                
        
              </div>
              
      
            </div>
            
      
            <div
              class="fd-object-list__content"
            >
              
        
              <div
                class="fd-object-list__row"
              >
                
          
                <div
                  class="fd-object-list__row-left"
                >
                  
            
                  <div
                    class="fd-object-list__object-attribute"
                  >
                    
              
              First Attribute
            
                  </div>
                  
          
                </div>
                
          
                <div
                  class="fd-object-list__row-right"
                >
                  
          
                  <span
                    class="fd-object-status fd-object-status--negative"
                  >
                    
          
                    <i
                      class="fd-object-status__icon sap-icon--status-negative"
                      role="presentation"
                    />
                    
          
                    <span
                      class="fd-object-status__text"
                    >
                      Negative
                    </span>
                    
         
                  </span>
                  
          
                </div>
                
        
              </div>
              
        
              <div
                class="fd-object-list__row"
              >
                
          
                <div
                  class="fd-object-list__row-left"
                >
                  
            
                  <div
                    class="fd-object-list__object-attribute"
                  >
                    
              Second Attribute
            
                  </div>
                  
          
                </div>
                
          
                <div
                  class="fd-object-list__row-right"
                >
                  
            
                  <span
                    class="fd-object-status fd-object-status--critical"
                  >
                    
              
                    <span
                      class="fd-object-status__text"
                    >
                      Critical
                    </span>
                    
            
                  </span>
                  
          
                </div>
                
        
              </div>
              
        
              <div
                class="fd-object-list__row"
              >
                
          
                <div
                  class="fd-object-list__row-left"
                >
                  
            
                  <div
                    class="fd-object-list__object-attribute"
                  >
                    
              Third Attribute
            
                  </div>
                  
        
                </div>
                
      
              </div>
              
    
            </div>
            
    
          </div>
          
    
        </a>
        
  
      </li>
        
 
    </ul>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Object List Standard 1`] = `
<section>
  

  <h4
    id="objectListItemHeader"
  >
    Object List Item
  </h4>
  

  <ul
    aria-labelledby="objectListItemHeader"
    class="fd-list fd-object-list"
    role="list"
  >
    
  
    <li
      class="fd-list__item fd-object-list__item"
      role="listitem"
      tabindex="0"
    >
      
    
      <div
        class="fd-object-list__container"
      >
        
      
        <div
          class="fd-object-list__intro"
        >
          
       Optional inline text very very very long
      
        </div>
        
      
        <div
          class="fd-object-list__header"
        >
          
        
          <span
            class="fd-avatar fd-avatar--s"
            style="background-image: url('http://picsum.photos/id/1018/400')"
          >
            
        
          </span>
          
        
          <div
            class="fd-object-list__header-left"
          >
            
         
            <div
              class="fd-object-identifier fd-object-list__object-identifier"
            >
              
          
              <p
                class="fd-object-identifier__title"
              >
                
           Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
          
              </p>
              
         
            </div>
            
        
          </div>
          
        
          <div
            class="fd-object-list__header-right"
          >
            
          
            <span
              class="fd-object-number fd-object-number--critical fd-object-list__object-number"
            >
              
            
              <span
                class="fd-object-number__text"
              >
                457.00
              </span>
              
            
              <span
                class="fd-object-number__unit"
              >
                Euro
              </span>
              
          
            </span>
            
        
          </div>
          
      
        </div>
        
      
        <div
          class="fd-object-list__content"
        >
          
        
          <div
            class="fd-object-list__row"
          >
            
          
            <div
              class="fd-object-list__row-left"
            >
              
            
              <div
                class="fd-object-list__object-attribute"
              >
                
              
              First Attribute
            
              </div>
              
          
            </div>
            
          
            <div
              class="fd-object-list__row-right"
            >
              
            
              <div
                class="fd-object-marker"
              >
                
              
                <i
                  aria-label="icon for flag"
                  class="fd-object-marker__icon sap-icon--flag"
                />
                
            
              </div>
              
            
              <div
                class="fd-object-marker"
              >
                
              
                <i
                  aria-label="icon for favourite"
                  class="fd-object-marker__icon sap-icon--favorite"
                />
                
            
              </div>
              
          
            </div>
            
        
          </div>
          
        
          <div
            class="fd-object-list__row"
          >
            
          
            <div
              class="fd-object-list__row-left"
            >
              
            
              <div
                class="fd-object-list__object-attribute"
              >
                
              Second Attribute
            
              </div>
              
          
            </div>
            
          
            <div
              class="fd-object-list__row-right"
            >
              
            
              <span
                class="fd-object-status fd-object-status--critical"
              >
                
              
                <span
                  class="fd-object-status__text"
                >
                  Critical very very very long
                </span>
                
            
              </span>
              
          
            </div>
            
        
          </div>
          
        
          <div
            class="fd-object-list__row"
          >
            
          
            <div
              class="fd-object-list__row-left"
            >
              
            
              <div
                class="fd-object-list__object-attribute"
              >
                
              Third Attribute
            
              </div>
              
        
            </div>
            
      
          </div>
          
    
        </div>
        
    
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-object-list__item"
      role="listitem"
      tabindex="0"
    >
      
    
      <div
        class="fd-object-list__container"
      >
        
      
        <div
          class="fd-object-list__intro"
        >
          
       Optional inline text very very very long
      
        </div>
        
      
        <div
          class="fd-object-list__header"
        >
          
        
          <span
            class="fd-avatar fd-avatar--s"
            style="background-image: url('http://picsum.photos/id/1018/400')"
          >
            
        
          </span>
          
        
          <div
            class="fd-object-list__header-left"
          >
            
         
            <div
              class="fd-object-identifier fd-object-list__object-identifier"
            >
              
          
              <p
                class="fd-object-identifier__title"
              >
                
           Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
          
              </p>
              
         
            </div>
            
        
          </div>
          
        
          <div
            class="fd-object-list__header-right"
          >
            
          
            <span
              class="fd-object-number fd-object-number--critical fd-object-list__object-number"
            >
              
            
              <span
                class="fd-object-number__text"
              >
                956.00
              </span>
              
            
              <span
                class="fd-object-number__unit"
              >
                Euro
              </span>
              
          
            </span>
            
        
          </div>
          
      
        </div>
        
      
        <div
          class="fd-object-list__content"
        >
          
        
          <div
            class="fd-object-list__row"
          >
            
          
            <div
              class="fd-object-list__row-left"
            >
              
            
              <div
                class="fd-object-list__object-attribute"
              >
                
            First Attribute
            
              </div>
              
          
            </div>
            
          
            <div
              class="fd-object-list__row-right"
            >
              
          
              <span
                class="fd-object-status fd-object-status--negative"
              >
                
          
                <i
                  class="fd-object-status__icon sap-icon--status-negative"
                  role="presentation"
                />
                
          
                <span
                  class="fd-object-status__text"
                >
                  Negative
                </span>
                
         
              </span>
              
          
            </div>
            
        
          </div>
          
        
          <div
            class="fd-object-list__row"
          >
            
          
            <div
              class="fd-object-list__row-left"
            >
              
            
              <div
                class="fd-object-list__object-attribute"
              >
                
              Second Attribute
            
              </div>
              
          
            </div>
            
          
            <div
              class="fd-object-list__row-right"
            >
              
            
              <span
                class="fd-object-status fd-object-status--critical"
              >
                
              
                <span
                  class="fd-object-status__text"
                >
                  Critical
                </span>
                
            
              </span>
              
          
            </div>
            
        
          </div>
          
        
          <div
            class="fd-object-list__row"
          >
            
          
            <div
              class="fd-object-list__row-left"
            >
              
            
              <div
                class="fd-object-list__object-attribute"
              >
                
              Third Attribute
            
              </div>
              
        
            </div>
            
      
          </div>
          
    
        </div>
        
    
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-object-list__item"
      role="listitem"
      tabindex="0"
    >
      
    
      <div
        class="fd-object-list__container"
      >
        
      
        <div
          class="fd-object-list__intro"
        >
          
       Optional inline text very very very long
      
        </div>
        
      
        <div
          class="fd-object-list__header"
        >
          
        
          <span
            class="fd-avatar fd-avatar--s"
            style="background-image: url('http://picsum.photos/id/1018/400')"
          >
            
        
          </span>
          
        
          <div
            class="fd-object-list__header-left"
          >
            
         
            <div
              class="fd-object-identifier fd-object-list__object-identifier"
            >
              
          
              <p
                class="fd-object-identifier__title"
              >
                
           Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
          
              </p>
              
         
            </div>
            
        
          </div>
          
        
          <div
            class="fd-object-list__header-right"
          >
            
          
            <span
              class="fd-object-number fd-object-number--critical fd-object-list__object-number"
            >
              
            
              <span
                class="fd-object-number__text"
              >
                956.00
              </span>
              
            
              <span
                class="fd-object-number__unit"
              >
                Euro
              </span>
              
          
            </span>
            
        
          </div>
          
      
        </div>
        
      
        <div
          class="fd-object-list__content"
        >
          
        
          <div
            class="fd-object-list__row"
          >
            
          
            <div
              class="fd-object-list__row-left"
            >
              
            
              <div
                class="fd-object-list__object-attribute"
              >
                
              First Attribute
            
              </div>
              
          
            </div>
            
          
            <div
              class="fd-object-list__row-right"
            >
              
          
              <span
                class="fd-object-status fd-object-status--inverted fd-object-status--critical"
              >
                Warning
              </span>
              
          
            </div>
            
        
          </div>
          
        
          <div
            class="fd-object-list__row"
          >
            
          
            <div
              class="fd-object-list__row-left"
            >
              
            
              <div
                class="fd-object-list__object-attribute"
              >
                
              Second Attribute
            
              </div>
              
          
            </div>
            
          
            <div
              class="fd-object-list__row-right"
            >
              
            
              <span
                class="fd-object-status fd-object-status--critical"
              >
                
              
                <span
                  class="fd-object-status__text"
                >
                  Critical
                </span>
                
            
              </span>
              
          
            </div>
            
        
          </div>
          
        
          <div
            class="fd-object-list__row"
          >
            
          
            <div
              class="fd-object-list__row-left"
            >
              
            
              <div
                class="fd-object-list__object-attribute"
              >
                
              Third Attribute
            
              </div>
              
        
            </div>
            
      
          </div>
          
    
        </div>
        
    
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-object-list__item"
      role="listitem"
      tabindex="0"
    >
      
    
      <div
        class="fd-object-list__container"
      >
        
      
        <div
          class="fd-object-list__intro"
        >
          
       Optional inline text very very very long
      
        </div>
        
      
        <div
          class="fd-object-list__header"
        >
          
        
          <span
            class="fd-avatar fd-avatar--s"
            style="background-image: url('http://picsum.photos/id/1018/400')"
          >
            
        
          </span>
          
        
          <div
            class="fd-object-list__header-left"
          >
            
         
            <div
              class="fd-object-identifier fd-object-list__object-identifier"
            >
              
          
              <p
                class="fd-object-identifier__title"
              >
                
           Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
          
              </p>
              
         
            </div>
            
        
          </div>
          
        
          <div
            class="fd-object-list__header-right"
          >
            
          
            <span
              class="fd-object-number fd-object-number--critical fd-object-list__object-number"
            >
              
            
              <span
                class="fd-object-number__text"
              >
                457.00
              </span>
              
            
              <span
                class="fd-object-number__unit"
              >
                Euro
              </span>
              
          
            </span>
            
        
          </div>
          
      
        </div>
        
      
        <div
          class="fd-object-list__content"
        >
          
        
          <div
            class="fd-object-list__row"
          >
            
          
            <div
              class="fd-object-list__row-left"
            >
              
            
              <div
                class="fd-object-list__object-attribute"
              >
                
              First Attribute
            
              </div>
              
          
            </div>
            
          
            <div
              class="fd-object-list__row-right"
            >
              
            
              <div
                class="fd-object-marker"
              >
                
              
                <i
                  class="fd-object-marker__icon sap-icon--user-edit"
                  role="presentation"
                />
                
                
                <span
                  class="fd-object-marker__text"
                >
                  Draft
                </span>
                
            
              </div>
              
          
            </div>
            
        
          </div>
          
        
          <div
            class="fd-object-list__row"
          >
            
          
            <div
              class="fd-object-list__row-left"
            >
              
            
              <div
                class="fd-object-list__object-attribute"
              >
                
              Second Attribute
            
              </div>
              
          
            </div>
            
        
          </div>
          
        
          <div
            class="fd-object-list__row"
          >
            
          
            <div
              class="fd-object-list__row-left"
            >
              
            
              <div
                class="fd-object-list__object-attribute"
              >
                
              Third Attribute
            
              </div>
              
        
            </div>
            
      
          </div>
          
    
        </div>
        
    
      </div>
      
  
    </li>
    

  </ul>
  

</section>
`;
